# robot-model-tools

./: LICENSE  pyproject.toml  readme.md  setup.py
etc/libmeshcat/: CMakeLists.txt
etc/libmeshcat/include/meshcatcpp/: buffer.h  commands.h  zmqclient.h
etc/libmeshcat/src/: buffer.cpp  commands.cpp  zmqclient.cpp
sample/: sample1.py
sample/models/ur5/: connectivity.jsonld  ur5-connect.yaml  ur5-geometry.yaml  ur5-inertia.yaml  ur5-joint-limits.yaml  ur5-numbering.jsonld  ur5-numbering.yaml  ur5.kindsl  ur5.urdf  ur5.yaml
src/: runner.py
src/rmt/: __init__.py  __main__.py  kinematics.py  load.py  rmt.py
src/rmt/viewer/: __init__.py  __main__.py  main.py  meshcat.py
src/robmodel/: __init__.py  connectivity.py  frames.py  geometry.py  inertia.py  jlimits.py  jposes.py  ordering.py  treeutils.py
src/robmodel/convert/: __init__.py  utils.py
src/robmodel/convert/coppeliasim/: __init__.py  exp.py
src/robmodel/convert/json/: imp.py
src/robmodel/convert/json/schemas/: connectivity.ctx  connectivity.json  numbering.ctx
src/robmodel/convert/kindsl/: __init__.py  exp.py  imp.py  kindsl.tx
src/robmodel/convert/urdf/: __init__.py  exp.py  imp.py
src/robmodel/convert/yaml/: __init__.py  exp.py  imp.py
test/: connectivity.py  robottest.py  testcore.py  ur5.py
